--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "author": "aloniko.zus@gmail.com",
-    "dependencies": {},
+    "dependencies": {
+        "pebble-clay": "^1.0.2"
+    },
     "keywords": [],
     "name": "weatherme",
     "pebble": {
